# bazel-playground

./: .clang-tidy  README.md  make.sh
main/: BUILD.bazel  hello-world.cc
